--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <span>Testimonial</span>
                 </li>
                 <li>
-                    <a href="#contact_me" class="active inner-link">
+                    <a href="#contact_me" class="inner-link">
                         <i class="las la-phone"></i>
                         <span>Contact Me</span>
                     </a>
@@ -643,7 +643,7 @@
                 </div>
             </section>
         </section>
-        <section id="contact_me" class="active">
+        <section id="contact_me">
             <div class="text-center">
                 <header class="has-bg">
                     <img src="assets/images/h1-bg.png" alt="h1 bg">
