--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#home" class="inner-link">
+                    <a href="#home" class="active inner-link">
                         <i class="las la-home"></i>
                         <span>Home</span>
                     </a>
@@ -74,7 +74,7 @@
         </div>
     </div>
     <main>
-        <section id="home">
+        <section id="home" class=active>
             <div class="meteor-shower"></div>
             <div class="container">
                 <div class="row">
